--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+/frontend/node_modules
+/backend/node_modules
+/node_modules
+/node_modules/
+node_modules
+
+
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
